CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 OLD)
ENDIF(COMMAND CMAKE_POLICY)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
	
PROJECT(estimanalyzer)

SET(ANALYZER_SRC
src/main.cpp
)

SET(ANALYZER_PLATFORM_SRC )

IF(WIN32)
	SET(ANALYZER_SRC ${ANALYZER_SRC}
	src/dirent.c)
ENDIF(WIN32)

ADD_EXECUTABLE(estimanalyzer ${ANALYZER_SRC} ${ANALYZER_PLATFORM_SRC})

FIND_LIBRARY(GD_LIBRARY NAMES libgd gd)
IF(GD_LIBRARY)
	TARGET_LINK_LIBRARIES(estimanalyzer ${GD_LIBRARY})
ELSE(GD_LIBRARY)
	MESSAGE(FATAL_ERROR "Could not find libgd.")
ENDIF(GD_LIBRARY)

FIND_LIBRARY(SNDFILE_LIBRARY NAMES libsndfile sndfile)
IF(SNDFILE_LIBRARY)
	TARGET_LINK_LIBRARIES(estimanalyzer ${SNDFILE_LIBRARY})
ELSE(SNDFILE_LIBRARY)
	MESSAGE(FATAL_ERROR "Could not find libsndfile.")
ENDIF(SNDFILE_LIBRARY)

FIND_LIBRARY(PFFFT_LIBRARY NAMES pffft)
IF(PFFFT_LIBRARY)
	TARGET_LINK_LIBRARIES(estimanalyzer ${PFFFT_LIBRARY})
	ADD_DEFINITIONS(-DPFFFT_ENABLE_DOUBLE)
ELSE(PFFFT_LIBRARY)
	MESSAGE(FATAL_ERROR "Cold not find pffft.")
ENDIF(PFFFT_LIBRARY)
